--- a/styles/index.css
+++ b/styles/index.css
@@ -33,10 +33,53 @@
   font-weight: 500;
 }
 
+/* ✅ Banner Section */
+.banner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 92px 65px 0 235px;
+  gap: 40px;
+}
+
+.banner-content {
+  flex: 1;
+
+}
+
+.banner-content h1 {
+  font-size: 65px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.banner-content p {
+  font-size: 22px;
+  color: #000000;
+}
+
+.highlight {
+  color: #E95A08;
+}
+
+.highlight-flower {
+  color: #E95A08;
+  display: block;
+}
+
+.banner-image {
+  flex: 1;
+}
+
+.banner-image img {
+  max-width: 100%;
+  height: auto;
+}
+
 /* mobile responsive */
 @media (max-width: 768px) {
 
-  /* ✅ Navbar */
+  /* navbar */
   .navbar {
     padding: 13px 16px;
   }
@@ -63,4 +106,17 @@
     width: 100%;
   }
 
-}
+  /*banner */
+  .banner {
+    flex-direction: column;
+    padding: 40px 16px;
+    text-align: left;
+  }
+
+  .banner-image {
+    order: -1;
+  }
+
+  .banner-content {
+    width: 100%;
+  }
